--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="id">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/logo-tmj.png" />
+    <link rel="apple-touch-icon" href="/logo-tmj.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lab TMJ - Teknologi Multimedia dan Jaringan</title>
   </head>
